--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         </section>
         <section>
             <h3><a id="unfinished_business">Unfinished Business</a></h3>
-            <p>We discussed the wrap-up of our most recent project, <b>Dog Walker</b>.
+            <h4><p>We discussed the wrap-up of our most recent project, <b>Dog Walker</b>.
                 The project itself is completed, but we have not gone ahead with the rollout.
                 The plan as of now is to go <strong>early availabilty</strong> first, and eventually
                 general availabilty.
                 <br>
-                We hope to go EA within the next <i>two</i> weeks, but have not gotten <em>confirmation</em> yet.</p>
+                We hope to go EA within the next <i>two</i> weeks, but have not gotten <em>confirmation</em> yet.</p></h4>
         </section>
         <section>
             <h3><a id="new_business">New Business</a></h3>
