--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Meeting Minutes</title>
     <meta name = "keywords" content = "Meeting Info, Meeting Details" />
     <meta name = "description" content = "Detailing all meeting info" />
-    <link rel="icon" type="x-icon" href="/favicon.jpeg">
+    <link rel="icon" type="x-icon" href="favicon.jpeg">
   </head>
   <body>
     <header>
@@ -59,29 +59,30 @@
                 The plan as of now is to go <strong>early availabilty</strong> first, and eventually
                 general availabilty.
                 <br>
+                <br>
                 We hope to go EA within the next <i>two</i> weeks, but have not gotten <em>confirmation</em> yet.</p></h4>
         </section>
         <section>
             <h3><a id="new_business">New Business</a></h3>
             <p>We went over our new project, <b>Good Dog!</b> which will consist of an app
-                that assists users in teaching <strong>their dof tricks</strong>.
+                that assists users in teaching <strong>their dog tricks</strong>.
                 <br>
                 We still have to assign <i>Emma</i> a part of the project to tackle, which should happen within
                 the next week.</p>
         </section>
         <div>
             <h3><a id="pictures">Pictures</a></h3>
-            <img src="lab-two-image.jpg"
+            <img src="lab-two-image.jpg" width="500" height="600"
             alt="Dog">
         </div>
         <div>
             <h3><a id="video">Video</a></h3>
             <video controls width="250">
-                <source src="lab-two-video.mov">
+                <source src="lab-two-video.MOV">
             </video>
             <details>
                 <summary>The struggle of dog training!</summary>
-                As our project involves streamilining the process training your dog, we watched some
+                As our project involves streamilining the process of training your dog, we watched some
                 videos that capture the struggle. 
             </details>
         </div>
@@ -105,7 +106,9 @@
                     <input type="radio" id="concern">
                     <label for="concern">Concern</label>
                 </fieldset>
+                <br>
                 <label for="input">What did you want to share?</label>
+                <br>
                 <input type="text" id="input">
                 <br>
                 <fieldset>
@@ -117,8 +120,9 @@
                     <input type="checkbox" id="urgency">
                     <label for="urgency">Not urgent</label>
                 </fieldset>
-                <input type="date" id="timeline">
                 <label for="timeline">When do you need this input addressed by?</label>
+                <br>
+                <input type="date" id="timeline">
                 <br>
                 <label for="input-type"></label>
                 <input list="input-type">
@@ -131,8 +135,10 @@
                 </datalist>
                 <br>
                 <label for="details">Anything else you wanted to include?</label>
+                <br>
                 <textarea id="details" rows="5" cols="33">
                 </textarea>
+                <br>
                 <label for="relation">What is your involvement with the project?</label>
                 <select id="relation">
                     <option value="team">Project team member</option>
