--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
         </section>
         <section>
             <h3><a id="unfinished_business">Unfinished Business</a></h3>
-            <h4><p>We discussed the wrap-up of our most recent project, <b>Dog Walker</b>.
+            <p>We discussed the wrap-up of our most recent project, <b>Dog Walker</b>.
                 The project itself is completed, but we have not gone ahead with the rollout.
                 The plan as of now is to go <strong>early availabilty</strong> first, and eventually
                 general availabilty.
                 <br>
                 <br>
-                We hope to go EA within the next <i>two</i> weeks, but have not gotten <em>confirmation</em> yet.</p></h4>
+                We hope to go EA within the next <i>two</i> weeks, but have not gotten <em>confirmation</em> yet.</p>
         </section>
         <section>
             <h3><a id="new_business">New Business</a></h3>
@@ -126,9 +126,9 @@
                 <br>
                 <input type="date" id="timeline">
                 <br>
-                <label for="input-type">Which category does your input involve?</label>
-                <input list="input-type">
-                <datalist id="input-type">
+                <label for="project-area">Which category does your input involve?</label>
+                <input list="project-area">
+                <datalist id="project-area">
                     <option value="Front end project details">
                     <option value="Back end project details">
                     <option value="Project timeline">
