--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Meeting Minutes</title>
     <meta name = "keywords" content = "Meeting Info, Meeting Details" />
     <meta name = "description" content = "Detailing all meeting info" />
-    <link rel="icon" type="x-icon" href="favicon.jpeg">
+    <link rel="icon" type="x-icon" href="favicon.ico">
   </head>
   <body>
     <header>
