--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </span>
     </main>
     <footer>
-        <p>© Group 33 CSE 110 2022</p>
+        <p>Group 33 CSE 110 2022 ©</p>
     </footer>
   </body>
 </html>
