--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Meeting Minutes</title>
     <meta name = "keywords" content = "Meeting Info, Meeting Details" />
     <meta name = "description" content = "Detailing all meeting info" />
-    <link rel="icon" type="jpg" href="favicon.jpg">
+    <link rel="icon" type="image/jpg" href="favicon.jpg">
   </head>
   <body>
     <header>
@@ -81,7 +81,7 @@
             </details>
         </div>
         <div>
-            <h3><a id="audio">Audio</a></h3><h1>
+            <h3><a id="audio">Audio</a></h3>
             <audio controls
                 src="lab-two-audio.m4a">
             </audio>
@@ -106,11 +106,11 @@
                 <fieldset>
                     <legend>How urgent is your input?</legend>
                     <input type="checkbox" id="large-urgency">
-                    <label for="urgency">Extremely  urgent</label>
+                    <label for="large-urgency">Extremely  urgent</label>
                     <input type="checkbox" id="mid-urgency">
-                    <label for="urgency">Somewhat urgent</label>
+                    <label for="mid-urgency">Somewhat urgent</label>
                     <input type="checkbox" id="no-urgency">
-                    <label for="urgency">Not urgent</label>
+                    <label for="no-urgency">Not urgent</label>
                 </fieldset>
                 <br>
                 <label for="timeline">When do you need this input addressed by?</label>
@@ -118,7 +118,7 @@
                 <input type="date" id="timeline">
                 <br>
                 <label for="project">Which category does your input involve?</label>
-                <input list="project-area" name="project">
+                <input list="project-area" id="project">
                 <datalist id="project-area">
                     <option value="Front end project details">
                     <option value="Back end project details">
