Added CSS to meeting minutes

--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <title>Meeting Minutes</title>
     <meta name = "keywords" content = "Meeting Info, Meeting Details" />
     <meta name = "description" content = "Detailing all meeting info" />
+    <link rel="stylesheet" href="index.css">
     <link rel="icon" type="image/jpg" href="favicon.jpg">
+    <style>
+    body {background-color: lightsteelblue;}
+    </style>
   </head>
   <body>
     <header>
-        <h1>Group 33 Meeting One Notes</h1>
+        <h1 style="color:forestgreen;">Group 33 Meeting One Notes</h1>
         <h2>Lots of brainstorming and clarification.</h2>
         <h2>October 1st, 2022</h2>
     </header>
