--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-        <h1 style="color:forestgreen;">Group 33 Meeting One Notes</h1>
+        <h1 style="color:darkolivegreen;">Group 33 Meeting One Notes</h1>
         <h2>Lots of brainstorming and clarification.</h2>
         <h2>October 1st, 2022</h2>
     </header>
