--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </ul>
         </section>
         <section>
-            <h3><a id="meeting_agenda">Meeting Agenda</a></h3>
+            <h3><a id="meeting_agenda" class="section-headers">Meeting Agenda</a></h3>
             <ul>
                 <li>Project Overview</li>
                 <li>Individual Roles</li>
@@ -69,12 +69,12 @@
                 the next week.</p>
         </section>
         <div>
-            <h3><a id="pictures">Pictures</a></h3>
+            <h3><a id="pictures" class="section-headers">Pictures</a></h3>
             <img src="lab-two-image.jpg" width="500" height="600"
             alt="Dog">
         </div>
         <div>
-            <h3><a id="video">Video</a></h3>
+            <h3><a id="video" class="section-headers">Video</a></h3>
             <video controls width="250">
                 <source src="lab-two-video.MOV">
             </video>
@@ -85,13 +85,13 @@
             </details>
         </div>
         <div>
-            <h3><a id="audio">Audio</a></h3>
+            <h3><a id="audio" class="section-headers">Audio</a></h3>
             <audio controls
                 src="lab-two-audio.m4a">
             </audio>
         </div>
         <div>
-            <h3><a id="comments_questions_concerns">Comments, Questions & Concerns</a></h3>
+            <h3><a id="comments_questions_concerns" class="section-headers">Comments, Questions & Concerns </a></h3>
             <form>
                 <fieldset>
                     <legend>Do you have a question, comment, or concern regarding the project?</legend>
