--- a/index.html
+++ b/index.html
@@ -68,27 +68,29 @@
                 We still have to assign <i>Emma</i> a part of the project to tackle, which should happen within
                 the next week.</p>
         </section>
-        <div>
-            <h3><a id="pictures" class="section-headers">Pictures</a></h3>
-            <img src="lab-two-image.jpg" width="500" height="600"
-            alt="Dog">
-        </div>
-        <div>
-            <h3><a id="video" class="section-headers">Video</a></h3>
-            <video controls width="250">
-                <source src="lab-two-video.MOV">
-            </video>
-            <details>
-                <summary>The struggle of dog training!</summary>
-                As our project involves streamilining the process of training your dog, we watched some
-                videos that capture the struggle. 
-            </details>
-        </div>
-        <div>
-            <h3><a id="audio" class="section-headers">Audio</a></h3>
-            <audio controls
-                src="lab-two-audio.m4a">
-            </audio>
+        <div class="flex-container">
+            <div class="flex-item">
+                <h3><a id="pictures" class="section-headers">Pictures</a></h3>
+                <img src="lab-two-image.jpg" width="500" height="600"
+                alt="Dog">
+            </div>
+            <div class="flex-item">
+                <h3><a id="video" class="section-headers">Video</a></h3>
+                <video controls width="250">
+                    <source src="lab-two-video.MOV">
+                </video>
+                <details>
+                    <summary>The struggle of dog training!</summary>
+                    As our project involves streamilining the process of training your dog, we watched some
+                    videos that capture the struggle. 
+                </details>
+            </div>
+            <div class="flex-item">
+                <h3><a id="audio" class="section-headers">Audio</a></h3>
+                <audio controls
+                    src="lab-two-audio.m4a">
+                </audio>
+            </div>
         </div>
         <div>
             <h3><a id="comments_questions_concerns" class="section-headers">Comments, Questions & Concerns </a></h3>
